# aios

./: .gitignore  AIGovernanceRules.md  AI_MEMORY.md  ArchitectureDiagrams.md  CHANGELOG.md  CodingStandards.md  ContributionGuide.md  DECISIONS.md  DEPLOYMENT_CHECKLIST.md  DependencyGraph.md  DocumentationStandards.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_REPORT.md  HANDOVER.md  HARDENING_LOG.md  INDEXING_STRATEGY.md  ImplementationRoadmap.md  KNOWLEDGE_BASE.md  Milestones.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATE.json  QUICK_REFERENCE.md  README.md  ROADMAP.md  RepositoryStructure.md  RiskAnalysis.md  SELF_IMPROVEMENT.md  SMOKE_TEST_RESULT.md  SRS.md  SystemDesign.md  TAG.txt  TASKS.md  TEST_REPORT.md  TestingStandards.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/aios/: __init__.py  main.py
backend/aios/agents/: __init__.py  architect.py  backend_engineer.py  base.py  code_patcher.py  meta_controller.py  planner.py  qa_engineer.py  registry.py  reviewer.py
backend/aios/api/: __init__.py
backend/aios/api/v1/: __init__.py  agents.py  knowledge.py  memory.py  plugins.py  projects.py  providers.py  router.py  security.py  system.py  workflows.py
backend/aios/api/websocket/: __init__.py  router.py
backend/aios/core/: __init__.py  config.py  events.py  exceptions.py  logging.py  security.py
backend/aios/database/: __init__.py  connection.py
backend/aios/database/migrations/: __init__.py  env.py
backend/aios/engine/: __init__.py  approval_gates.py  dependency_resolver.py  parallel_executor.py  task_scheduler.py  workflow_engine.py
backend/aios/knowledge/: __init__.py  indexer.py
backend/aios/memory/: __init__.py  decision.py  graph.py  long_term.py  short_term.py  vector.py
backend/aios/observability/: __init__.py  metrics.py
backend/aios/plugins/: __init__.py  manager.py
backend/aios/providers/: __init__.py  base.py  ollama.py  openrouter.py  registry.py
backend/aios/schemas/: __init__.py  agent.py  common.py  knowledge.py  memory.py  plugin.py  project.py  provider.py  workflow.py
backend/aios/security/: __init__.py  audit.py  rbac.py
backend/aios/utils/: __init__.py  retry.py
backend/aios/websocket/: manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: test_agent_lifecycle.py
backend/tests/unit/: test_config.py  test_providers.py  test_security.py  test_system.py  test_workflow_engine.py
config/: default.toml
scripts/: demo_token_savings.py  deploy.sh  dev.sh  file_watcher.py  rollback.sh  self_improve.py  setup.sh  test.sh  validate_state.py
(+2 files in other folders)
